@@ -1,3 +1,11 @@
+1999-04-11  Tanaka Akira  <akr@jaist.ac.jp>
+
+	* mcs-e20.el (x-ctext): Define coding system `x-ctext' if `ctext' is
+	not proper for decoding `iso-2022-jp-2'.
+
+	* mcs-20.el (mime-charset-coding-system-alist): Use coding system
+	`x-ctext' for MIME charset `x-ctext' if it is defined.
+
 1999-04-09  Tanaka Akira  <akr@jaist.ac.jp>
 
 	* static.el: Add doc-strings.
